repositories {
    jcenter()
    mavenCentral()
}

apply plugin: 'application'

dependencies {
    implementation group: 'org.nanohttpd', name: 'nanohttpd', version: 'latest.integration'
    implementation group: 'org.antlr', name: 'ST4', version: 'latest.release'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: 'latest.release'
    implementation group: 'com.google.guava', name: 'guava', version: 'latest.release'
    implementation group: 'com.google.openlocationcode', name: 'openlocationcode', version: 'latest.release'
    implementation group: 'org.threeten', name: 'threeten-extra', version: 'latest.release'

    implementation group: 'org.neo4j', name: 'neo4j-ogm-core', version: 'latest.release'
    implementation group: 'org.neo4j', name: 'neo4j-ogm-bolt-driver', version: 'latest.release'

    runtimeOnly group: 'ch.qos.logback', name: 'logback-classic', version: 'latest.release'



    testImplementation group: 'com.google.truth', name: 'truth', version: 'latest.release'
    testImplementation group: 'com.google.truth.extensions', name: 'truth-java8-extension', version: 'latest.release'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: 'latest.release'

    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: 'latest.release'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
}

group = 'nu.mine.mosher.gedcom'
mainClassName = 'nu.mine.mosher.genealdb.Genealdb'
sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
version = '1.0.0-SNAPSHOT'
